// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`review section snapshot tests course page test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui fluid container"
      >
        <div
          class="ui grid"
        >
          <div
            class="row"
          >
            <div
              class="four wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="sorting"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Sort by
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      None
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Positive
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Negative
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Newest
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Oldest
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Agreed
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Disagreed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="four wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="yearFilter"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Filter by
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      None
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Written within 2 years
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Written within 5 years
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="one wide column"
            />
            <div
              class="seven wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid multiple search selection dropdown"
                name="associatedEntityFilter"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  autocomplete="off"
                  class="search"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <span
                  class="sizer"
                />
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Search for a specific professor
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  aria-multiselectable="true"
                  class="menu transition"
                  role="listbox"
                >
                  <div
                    aria-checked="false"
                    aria-selected="true"
                    class="selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Nakul Verma
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Lee Bollinger
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="ui container review-card-container"
            >
              <div
                class="ui grid"
              >
                <div
                  class="fourteen wide column review-card-left-grid-column"
                >
                  <div
                    class="ui fluid container"
                  >
                    <div
                      class="ui message"
                      style="background-color: rgb(255, 241, 241);"
                    >
                      <i
                        aria-hidden="true"
                        class="red warning circle icon"
                      />
                      Please keep in mind that this review is more than 5 years old.
                    </div>
                    <div
                      class="ui container review-card-left-column-header-container"
                    >
                      <div
                        class="ui header display-header"
                      >
                        Nakul
                         
                        Verma
                      </div>
                      <h5
                        class="ui header"
                      >
                        2020-01-01
                      </h5>
                      <div
                        class="sc-AxirZ JnqYJ"
                      >
                        ID: 
                        1
                      </div>
                    </div>
                    <p>
                      demo content
                    </p>
                    <h3
                      class="ui header"
                    >
                      Workload
                    </h3>
                    <p>
                      demo workload
                    </p>
                  </div>
                </div>
                <div
                  class="two wide column review-card-right-grid-column"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="ui centered grid votes-container-grid"
                    >
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="blue-upvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          3
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="downvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          2
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="funny.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          1
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ui container review-card-container"
            >
              <div
                class="ui grid"
              >
                <div
                  class="fourteen wide column review-card-left-grid-column"
                >
                  <div
                    class="ui fluid container"
                  >
                    <div
                      class="ui container review-card-left-column-header-container"
                    >
                      <div
                        class="ui header display-header"
                      >
                        Lee
                         
                        Bollinger
                      </div>
                      <h5
                        class="ui header"
                      >
                        2020-01-01
                      </h5>
                      <div
                        class="sc-AxirZ JnqYJ"
                      >
                        ID: 
                        2
                      </div>
                    </div>
                    <p>
                      demo content
                    </p>
                    <h3
                      class="ui header"
                    >
                      Workload
                    </h3>
                    <p>
                      demo workload
                    </p>
                  </div>
                </div>
                <div
                  class="two wide column review-card-right-grid-column"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="ui centered grid votes-container-grid"
                    >
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="blue-upvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          3
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="downvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          2
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="funny.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          1
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="centered row review-section-show-more-grid-row"
          >
            <button
              class="ui large fluid button"
              name="showMoreButton"
            >
              Show more
              <i
                aria-hidden="true"
                class="arrow down icon review-section-show-more-icon"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui fluid container"
    >
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="four wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="sorting"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Sort by
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="true"
                  aria-selected="true"
                  class="active selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    None
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Positive
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Negative
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Newest
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Oldest
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Agreed
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Disagreed
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="yearFilter"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Filter by
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="true"
                  aria-selected="true"
                  class="active selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    None
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Written within 2 years
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Written within 5 years
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="one wide column"
          />
          <div
            class="seven wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid multiple search selection dropdown"
              name="associatedEntityFilter"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class="search"
                tabindex="0"
                type="text"
                value=""
              />
              <span
                class="sizer"
              />
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Search for a specific professor
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                aria-multiselectable="true"
                class="menu transition"
                role="listbox"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Nakul Verma
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Lee Bollinger
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="ui container review-card-container"
          >
            <div
              class="ui grid"
            >
              <div
                class="fourteen wide column review-card-left-grid-column"
              >
                <div
                  class="ui fluid container"
                >
                  <div
                    class="ui message"
                    style="background-color: rgb(255, 241, 241);"
                  >
                    <i
                      aria-hidden="true"
                      class="red warning circle icon"
                    />
                    Please keep in mind that this review is more than 5 years old.
                  </div>
                  <div
                    class="ui container review-card-left-column-header-container"
                  >
                    <div
                      class="ui header display-header"
                    >
                      Nakul
                       
                      Verma
                    </div>
                    <h5
                      class="ui header"
                    >
                      2020-01-01
                    </h5>
                    <div
                      class="sc-AxirZ JnqYJ"
                    >
                      ID: 
                      1
                    </div>
                  </div>
                  <p>
                    demo content
                  </p>
                  <h3
                    class="ui header"
                  >
                    Workload
                  </h3>
                  <p>
                    demo workload
                  </p>
                </div>
              </div>
              <div
                class="two wide column review-card-right-grid-column"
              >
                <div
                  class="ui container"
                >
                  <div
                    class="ui centered grid votes-container-grid"
                  >
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="blue-upvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        3
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="downvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        2
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="funny.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        1
                      </strong>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui container review-card-container"
          >
            <div
              class="ui grid"
            >
              <div
                class="fourteen wide column review-card-left-grid-column"
              >
                <div
                  class="ui fluid container"
                >
                  <div
                    class="ui container review-card-left-column-header-container"
                  >
                    <div
                      class="ui header display-header"
                    >
                      Lee
                       
                      Bollinger
                    </div>
                    <h5
                      class="ui header"
                    >
                      2020-01-01
                    </h5>
                    <div
                      class="sc-AxirZ JnqYJ"
                    >
                      ID: 
                      2
                    </div>
                  </div>
                  <p>
                    demo content
                  </p>
                  <h3
                    class="ui header"
                  >
                    Workload
                  </h3>
                  <p>
                    demo workload
                  </p>
                </div>
              </div>
              <div
                class="two wide column review-card-right-grid-column"
              >
                <div
                  class="ui container"
                >
                  <div
                    class="ui centered grid votes-container-grid"
                  >
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="blue-upvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        3
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="downvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        2
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="funny.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        1
                      </strong>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="centered row review-section-show-more-grid-row"
        >
          <button
            class="ui large fluid button"
            name="showMoreButton"
          >
            Show more
            <i
              aria-hidden="true"
              class="arrow down icon review-section-show-more-icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`review section snapshot tests professor page test 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui fluid container"
      >
        <div
          class="ui grid"
        >
          <div
            class="row"
          >
            <div
              class="four wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="sorting"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Sort by
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      None
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Positive
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Negative
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Newest
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Oldest
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Agreed
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Most Disagreed
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="four wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid selection dropdown"
                name="yearFilter"
                role="listbox"
                tabindex="0"
              >
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Filter by
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  class="menu transition"
                >
                  <div
                    aria-checked="true"
                    aria-selected="true"
                    class="active selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      None
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Written within 2 years
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      Written within 5 years
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="one wide column"
            />
            <div
              class="seven wide column"
            >
              <div
                aria-expanded="false"
                class="ui fluid multiple search selection dropdown"
                name="associatedEntityFilter"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  autocomplete="off"
                  class="search"
                  tabindex="0"
                  type="text"
                  value=""
                />
                <span
                  class="sizer"
                />
                <div
                  aria-atomic="true"
                  aria-live="polite"
                  class="divider default text"
                  role="alert"
                >
                  Search for a specific course
                </div>
                <i
                  aria-hidden="true"
                  class="dropdown icon"
                />
                <div
                  aria-multiselectable="true"
                  class="menu transition"
                  role="listbox"
                >
                  <div
                    aria-checked="false"
                    aria-selected="true"
                    class="selected item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      [COMS 4771] Machine Learning
                    </span>
                  </div>
                  <div
                    aria-checked="false"
                    aria-selected="false"
                    class="item"
                    role="option"
                    style="pointer-events: all;"
                  >
                    <span
                      class="text"
                    >
                      [POLS 3285] Freedom of Speech and Press
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="row"
          >
            <div
              class="ui container review-card-container"
            >
              <div
                class="ui grid"
              >
                <div
                  class="fourteen wide column review-card-left-grid-column"
                >
                  <div
                    class="ui fluid container"
                  >
                    <div
                      class="ui message"
                      style="background-color: rgb(255, 241, 241);"
                    >
                      <i
                        aria-hidden="true"
                        class="red warning circle icon"
                      />
                      Please keep in mind that this review is more than 5 years old.
                    </div>
                    <div
                      class="ui container review-card-left-column-header-container"
                    >
                      <div
                        class="ui header display-header"
                      >
                        <span
                          class="sc-AxjAm ekCnfx"
                        >
                          COMS 4771
                        </span>
                         
                        Machine Learning
                      </div>
                      <h5
                        class="ui header"
                      >
                        2020-01-01
                      </h5>
                      <div
                        class="sc-AxirZ JnqYJ"
                      >
                        ID: 
                        1
                      </div>
                    </div>
                    <p>
                      demo content
                    </p>
                    <h3
                      class="ui header"
                    >
                      Workload
                    </h3>
                    <p>
                      demo workload
                    </p>
                  </div>
                </div>
                <div
                  class="two wide column review-card-right-grid-column"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="ui centered grid votes-container-grid"
                    >
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="blue-upvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          3
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="downvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          2
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="funny.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          1
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ui container review-card-container"
            >
              <div
                class="ui grid"
              >
                <div
                  class="fourteen wide column review-card-left-grid-column"
                >
                  <div
                    class="ui fluid container"
                  >
                    <div
                      class="ui container review-card-left-column-header-container"
                    >
                      <div
                        class="ui header display-header"
                      >
                        <span
                          class="sc-AxjAm ekCnfx"
                        >
                          POLS 3285
                        </span>
                         
                        Freedom of Speech and Press
                      </div>
                      <h5
                        class="ui header"
                      >
                        2020-01-01
                      </h5>
                      <div
                        class="sc-AxirZ JnqYJ"
                      >
                        ID: 
                        2
                      </div>
                    </div>
                    <p>
                      demo content
                    </p>
                    <h3
                      class="ui header"
                    >
                      Workload
                    </h3>
                    <p>
                      demo workload
                    </p>
                  </div>
                </div>
                <div
                  class="two wide column review-card-right-grid-column"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="ui centered grid votes-container-grid"
                    >
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="blue-upvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          3
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="downvote.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          2
                        </strong>
                      </div>
                      <div
                        class="row votes-container-icon-row"
                      >
                        <img
                          class="ui image"
                          src="funny.png"
                        />
                      </div>
                      <div
                        class="row votes-container-number-row"
                      >
                        <strong>
                          1
                        </strong>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="centered row review-section-show-more-grid-row"
          >
            <button
              class="ui large fluid button"
              name="showMoreButton"
            >
              Show more
              <i
                aria-hidden="true"
                class="arrow down icon review-section-show-more-icon"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui fluid container"
    >
      <div
        class="ui grid"
      >
        <div
          class="row"
        >
          <div
            class="four wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="sorting"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Sort by
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="true"
                  aria-selected="true"
                  class="active selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    None
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Positive
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Negative
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Newest
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Oldest
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Agreed
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Most Disagreed
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="four wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid selection dropdown"
              name="yearFilter"
              role="listbox"
              tabindex="0"
            >
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Filter by
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                class="menu transition"
              >
                <div
                  aria-checked="true"
                  aria-selected="true"
                  class="active selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    None
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Written within 2 years
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    Written within 5 years
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="one wide column"
          />
          <div
            class="seven wide column"
          >
            <div
              aria-expanded="false"
              class="ui fluid multiple search selection dropdown"
              name="associatedEntityFilter"
              role="combobox"
            >
              <input
                aria-autocomplete="list"
                autocomplete="off"
                class="search"
                tabindex="0"
                type="text"
                value=""
              />
              <span
                class="sizer"
              />
              <div
                aria-atomic="true"
                aria-live="polite"
                class="divider default text"
                role="alert"
              >
                Search for a specific course
              </div>
              <i
                aria-hidden="true"
                class="dropdown icon"
              />
              <div
                aria-multiselectable="true"
                class="menu transition"
                role="listbox"
              >
                <div
                  aria-checked="false"
                  aria-selected="true"
                  class="selected item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    [COMS 4771] Machine Learning
                  </span>
                </div>
                <div
                  aria-checked="false"
                  aria-selected="false"
                  class="item"
                  role="option"
                  style="pointer-events: all;"
                >
                  <span
                    class="text"
                  >
                    [POLS 3285] Freedom of Speech and Press
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="ui container review-card-container"
          >
            <div
              class="ui grid"
            >
              <div
                class="fourteen wide column review-card-left-grid-column"
              >
                <div
                  class="ui fluid container"
                >
                  <div
                    class="ui message"
                    style="background-color: rgb(255, 241, 241);"
                  >
                    <i
                      aria-hidden="true"
                      class="red warning circle icon"
                    />
                    Please keep in mind that this review is more than 5 years old.
                  </div>
                  <div
                    class="ui container review-card-left-column-header-container"
                  >
                    <div
                      class="ui header display-header"
                    >
                      <span
                        class="sc-AxjAm ekCnfx"
                      >
                        COMS 4771
                      </span>
                       
                      Machine Learning
                    </div>
                    <h5
                      class="ui header"
                    >
                      2020-01-01
                    </h5>
                    <div
                      class="sc-AxirZ JnqYJ"
                    >
                      ID: 
                      1
                    </div>
                  </div>
                  <p>
                    demo content
                  </p>
                  <h3
                    class="ui header"
                  >
                    Workload
                  </h3>
                  <p>
                    demo workload
                  </p>
                </div>
              </div>
              <div
                class="two wide column review-card-right-grid-column"
              >
                <div
                  class="ui container"
                >
                  <div
                    class="ui centered grid votes-container-grid"
                  >
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="blue-upvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        3
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="downvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        2
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="funny.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        1
                      </strong>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ui container review-card-container"
          >
            <div
              class="ui grid"
            >
              <div
                class="fourteen wide column review-card-left-grid-column"
              >
                <div
                  class="ui fluid container"
                >
                  <div
                    class="ui container review-card-left-column-header-container"
                  >
                    <div
                      class="ui header display-header"
                    >
                      <span
                        class="sc-AxjAm ekCnfx"
                      >
                        POLS 3285
                      </span>
                       
                      Freedom of Speech and Press
                    </div>
                    <h5
                      class="ui header"
                    >
                      2020-01-01
                    </h5>
                    <div
                      class="sc-AxirZ JnqYJ"
                    >
                      ID: 
                      2
                    </div>
                  </div>
                  <p>
                    demo content
                  </p>
                  <h3
                    class="ui header"
                  >
                    Workload
                  </h3>
                  <p>
                    demo workload
                  </p>
                </div>
              </div>
              <div
                class="two wide column review-card-right-grid-column"
              >
                <div
                  class="ui container"
                >
                  <div
                    class="ui centered grid votes-container-grid"
                  >
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="blue-upvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        3
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="downvote.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        2
                      </strong>
                    </div>
                    <div
                      class="row votes-container-icon-row"
                    >
                      <img
                        class="ui image"
                        src="funny.png"
                      />
                    </div>
                    <div
                      class="row votes-container-number-row"
                    >
                      <strong>
                        1
                      </strong>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="centered row review-section-show-more-grid-row"
        >
          <button
            class="ui large fluid button"
            name="showMoreButton"
          >
            Show more
            <i
              aria-hidden="true"
              class="arrow down icon review-section-show-more-icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
